<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_f"
        android:title="@string/menu_fake_space"
        android:icon="@drawable/ic_favourite_fake"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_res"
        android:icon="@drawable/ic_baseline_reload"
        android:title="@string/menu_again"
        app:showAsAction="always"/>


    <item
        android:id="@+id/app_bar_note"
        android:icon="@drawable/ic_baseline_books"
        android:title="@string/menu_note"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/menu_setting"
        app:showAsAction="always"/>

</menu>