<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/navigation_space">

        <com.google.android.material.tabs.TabItem
            android:tag="one"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/theme_0" />

        <com.google.android.material.tabs.TabItem
            android:tag="two"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/theme_1" />

        <com.google.android.material.tabs.TabItem
            android:tag="three"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/theme_2" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/navigation_space_bottom"
        android:text="@string/ok"/>



</LinearLayout>