<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_difference"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/low_top_block_pos">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/low_top_block_w"
            android:layout_height="@dimen/low_top_block_h"
            android:backgroundTint="@color/background"
            app:cardCornerRadius="@dimen/low_top_block_r" />

    </LinearLayout>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/chip_group_pos"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/some11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="chip_l"
            android:text="@string/chip_1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/some12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="chip_c"
            android:text="@string/chip_2"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/some13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="chip_r"
            android:text="@string/chip_3" />
    </com.google.android.material.chip.ChipGroup>

</androidx.coordinatorlayout.widget.CoordinatorLayout>