<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="?colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:background="?colorPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:title="@string/app_name"
                app:title="@string/app_name"
                app:titleTextColor="?colorSecondary" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/pageIndicator"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="?colorSecondary"
            app:dotsStrokeColor="@color/white"
            app:dotsCornerRadius="5dp"
            app:dotsSize="16dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:selectedDotColor="?colorSecondary"
            app:progressMode="false"
            />

    </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/black">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/low_top_block_pos">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/low_top_block_w"
                    android:layout_height="@dimen/low_top_block_h"
                    android:backgroundTint="@color/background"
                    app:cardCornerRadius="@dimen/low_top_block_r" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/chip_group_pos"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:tag="chip_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_1" />

                <com.google.android.material.chip.Chip
                    android:tag="chip_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_2"
                    android:checked="true"
                    />

                <com.google.android.material.chip.Chip
                    android:tag="chip_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_3" />
            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/hgn_bottom_block_h"
                android:layout_gravity="bottom"
                android:background="@color/background" />

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottom_app_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/low_bottom_block_h"
                android:layout_gravity="bottom"
                app:backgroundTint="?colorPrimary"
                app:fabAlignmentMode="center" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/float_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorOnPrimary"
                app:borderWidth="@dimen/float_button_border"
                app:layout_anchor="@id/bottom_app_bar"
                app:srcCompat="@drawable/ic_wikipedia"
                tools:ignore="ContentDescription" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>
